Make sure the news lead lines don't get too long

--- a/src/onegov.town/onegov/town/theme/styles/town.scss
+++ b/src/onegov.town/onegov/town/theme/styles/town.scss
@@ -1079,6 +1079,7 @@ div#redactor-droparea {
     .news-lead,
     .news-continue {
         margin-bottom: .5rem;
+        max-width: $max-line-width;
     }
 }
 
